production/efk-server/elasticsearch/efk-clone/es-statefulset-clone.yaml
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-logging-clone
  namespace: logging
  labels:
    k8s-app: elasticsearch-logging-clone
spec:
  serviceName: elasticsearch-logging-clone
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging-clone
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging-clone
    spec:
      securityContext:
        fsGroup: 1000 # fsGroup is used for elasticsearch container
      serviceAccountName: elasticsearch-logging
      # Elasticsearch requires vm.max_map_count to be at least 262144.
      # If your OS already sets up this number to a higher value, feel free
      # to remove this init container.
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.2
        imagePullPolicy: Always
        name: elasticsearch-logging-clone
        securityContext:
          runAsUser: 1000   # elasticsearch container runs with elasticsearch user (1000:1000)
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-logging-clone
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-logging-clone
      annotations:
        snapshot.alpha.kubernetes.io/snapshot: snapshot-20181124153121-bf69
    spec:
      storageClassName: openebs-snapshot-promoter
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 50G
