production/efk-server/elasticsearch/efk-clone/efk-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    k8s-app: elasticsearch-logging-clone
  name: elasticsearch-logging-clone
  namespace: logging
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: db
  selector:
    k8s-app: elasticsearch-logging-clone
