production/efk-server/elasticsearch/efk-clone/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kibana-logging-clone
  name: kibana-logging-clone
  namespace: logging
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    k8s-app: kibana-logging-clone
